--- a/34657-h/34657-h.htm
+++ b/34657-h/34657-h.htm
@@ -71,7 +71,7 @@ p.hang2        {margin-left:1em; text-indent:0em;}
 
 <pre>
 
-The Project Gutenberg EBook of The Breaking of the Storm, Vol. I., by 
+The Project Gutenberg EBook of The Breaking of the Storm, Vol. I., by
 Friedrich Spielhagen
 
 This eBook is for the use of anyone anywhere at no cost and with
@@ -87,6 +87,7 @@ Author: Friedrich Spielhagen
 Translator: S. E. A. H. Stephenson
 
 Release Date: December 16, 2010 [EBook #34657]
+Last Updated: July 22, 2017
 
 Language: English
 
@@ -343,7 +344,7 @@ their course was now directed only a few days ago, and had been alarmed
 to see that where there had formerly been fifteen feet of water, there
 were now only twelve. To-day, after the strong west wind had kept the
 tide back to such an extent, there could hardly be ten feet, and the
-steamer drew light. And yet there was no lessening of speed, no
+steamer drew eight. And yet there was no lessening of speed, no
 soundings were taken, not one of the proper precautions thought of! Was
 the Captain mad?</p>
 
@@ -428,7 +429,7 @@ which it had only just managed to get over. A larger wave in its
 retreat had forced the stern a few inches further down. The screw
 laboured vigorously; the ship heeled over a little, but remained fixed.</p>
 
-<p class="normal">&quot;What the devil is the meaning of this?&quot; cried the General</p>
+<p class="normal">&quot;What the devil is the meaning of this?&quot; cried the General.</p>
 
 <p class="normal">&quot;There is no question of real danger,&quot; said Elsa quickly.</p>
 
@@ -785,7 +786,7 @@ should arise, he was a man who would be sure to do the right thing at
 the right moment, and would know how to meet the danger. This feeling
 of security had not deserted her even when they came through the surf,
 the little boat tossing about like a nutshell in the foaming waves, the
-President as pale as death perpetually exclaiming, &quot;Bless, my soul!&quot;
+President as pale as death perpetually exclaiming, &quot;Bless my soul!&quot;
 and even her father's grave face showing a shade of anxiety. She had
 only looked towards the man at the helm, and the blue eyes had shone as
 brightly as before, even more brightly as he smiled in answer to her
@@ -2377,7 +2378,7 @@ President and the General had repeatedly exchanged looks of
 understanding and approval, that Herr von Strummin's broad face had
 grown long with amazement and terror, and--what above all angered
 him--that the ladies listened as attentively as if a ball were in
-question. At Any rate he would not let him have the last word.</p>
+question. At any rate he would not let him have the last word.</p>
 
 <p class="normal">&quot;But this wonderful storm is at best--I mean in the most favourable
 case for you--a mere hypothesis!&quot; cried he.</p>
@@ -2418,7 +2419,7 @@ continuance; that it has already lasted its time, that an ebb must soon
 come, a reaction, a storm, which--to preserve the image which so
 strikingly applies to the matter--will, like the other, come upon us,
 destroying, overwhelming everything, and with its troubled and barren
-waters cover the ground, on which men behoved their riches and power to
+waters cover the ground, on which men believed their riches and power to
 be for ever established.&quot;</p>
 
 <p class="normal">In his eagerness to give another turn to the conversation, and in the
@@ -3997,7 +3998,7 @@ seemed rather like asking a lion to dance! But the lion did what he was
 asked, and did it amiably, with a kindly smile such as was seldom seen
 on that stern face.</p>
 
-<p class="normal">&quot;He succeeds better than, I do,&quot; thought Reinhold. &quot;More shame to me.&quot;</p>
+<p class="normal">&quot;He succeeds better than I do,&quot; thought Reinhold. &quot;More shame to me.&quot;</p>
 
 <p class="normal">At sight of this man, who with the innocence of a child seemed able to
 go about the world either not seeing, or at least not caring for its
@@ -4039,7 +4040,7 @@ for them, is not their fault.&quot;</p>
 
 <p class="normal">&quot;And how do you get over that difficulty?&quot; asked Reinhold.</p>
 
-<p class="normal">&quot;He just puts a new head on an old statue, and the Victory or Germany
+<p class="normal">&quot;He just puts a new head on an old statue, and the Victory of Germany
 is ready,&quot; said Uncle Ernst.</p>
 
 <p class="normal">&quot;I protest utterly against such atrocious calumny,&quot; cried the sculptor.
@@ -4458,7 +4459,7 @@ by without speaking, and having no idea whether Timbuctoo, or whatever
 it is called, is a town, or a fish, or an animal, and not daring to
 ask--he ought to know that!&quot;</p>
 
-<p class="normal">The knitting-needles choked more nervously, the spectacles had slipped
+<p class="normal">The knitting-needles clicked more nervously, the spectacles had slipped
 so far down her nose that they could not slip any farther without
 coming off; and it would have been impossible for the sharp words to
 find an outlet if the thin lips were to be more closely pressed
@@ -7457,7 +7458,7 @@ of my Chablis,&quot; cried Philip.</p>
 Lübbener.</p>
 
 <p class="normal">The Councillor laughed aside to the Count, and shrugged his shoulders
-as though to say, &quot;Boys will be boys I they go on like that all day.&quot;
+as though to say, &quot;Boys will be boys! they go on like that all day.&quot;
 The Count returned the smile most courteously.</p>
 
 <p class="normal">&quot;At Rome one must do as the Romans do,&quot; said he. &quot;I confess it would
@@ -7801,7 +7802,7 @@ Algarve'----&quot;</p>
 <p class="normal">Sidonie, who was walking by her side with her hands behind her back,
 stood still in astonishment.</p>
 
-<p class="normal">&quot;Child I child! is it possible? You read me that chapter yourself only
+<p class="normal">&quot;Child! child! is it possible? You read me that chapter yourself only
 yesterday evening. I have been lying awake and racking my brains over
 it all night, and you have forgotten that his Highness's illustrious
 bride was the Princess Stephanie of Hohenzollem-Sigmaringen? But the
@@ -8677,7 +8678,7 @@ darker.</p>
 
 
 
-End of the Project Gutenberg EBook of The Breaking of the Storm, Vol. I., by 
+End of the Project Gutenberg EBook of The Breaking of the Storm, Vol. I., by
 Friedrich Spielhagen
 
 *** END OF THIS PROJECT GUTENBERG EBOOK THE BREAKING OF THE STORM, VOL. I. ***
